--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>The Trove of Gems Photo Album</title>
+
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.res.cloudinary.com">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
