Add some meta tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+            name="author"
+            content="Dustin K Greco"
+    />
+    <meta
       name="description"
       content="Website That Serves A Photo Album For Our Family and Friends"
     />
+    <meta name=”robots” content="index, nofollow">
+    <meta name="keywords" content="The Trove Of Gems, Trove Of Gems, Dustin Greco, Dustin K Greco, Photo Album">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
