--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>The Trove of Gems Photo Album</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -11,10 +12,15 @@
     />
     <meta
       name="description"
-      content="Website That Serves A Photo Album For Our Family and Friends"
+      content="Webapp That Serves A Photo Album For Our Family and Friends"
     />
     <meta name=”robots” content="index, nofollow">
     <meta name="keywords" content="The Trove Of Gems, Trove Of Gems, Dustin Greco, Dustin K Greco, Photo Album">
+    <meta property="og:type" content="article">
+    <meta property="og:site_name" content="The Trove of Gems Photo Album">
+    <meta property="og:title" content="The Trove of Gems Photo Album">
+    <meta property="og:url" content="https://photo-album.thetroveofgems.tech">
+    <meta property="og:description" content="Webapp That Serves A Photo Album For Our Family and Friends">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,7 +36,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Trove of Gems Photo Album</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
