--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,7 @@
     <meta property="og:site_name" content="The Trove of Gems Photo Album">
     <meta property="og:title" content="The Trove of Gems Photo Album">
     <meta property="og:url" content="https://photo-album.thetroveofgems.tech">
+    <meta property="og:image" content="https://asset.cloudinary.com/ds5xwt3v1/c1d92b136c429ef7179ada0d8241a39d">
     <meta property="og:description" content="Webapp That Serves A Photo Album For Our Family and Friends">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
