--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,41 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>The Trove of Gems Photo Album</title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-            name="author"
-            content="Dustin K Greco"
-    />
-    <meta
-      name="description"
-      content="Webapp That Serves A Photo Album For Our Family and Friends"
-    />
-    <meta name=”robots” content="index, nofollow">
-    <meta name="keywords" content="The Trove Of Gems, Trove Of Gems, Dustin Greco, Dustin K Greco, Photo Album">
-    <meta property="og:type" content="article">
-    <meta property="og:site_name" content="The Trove of Gems Photo Album">
-    <meta property="og:title" content="The Trove of Gems Photo Album">
-    <meta property="og:url" content="https://photo-album.thetroveofgems.tech">
-    <meta property="og:image" content="https://asset.cloudinary.com/ds5xwt3v1/c1d92b136c429ef7179ada0d8241a39d">
-    <meta property="og:description" content="Webapp That Serves A Photo Album For Our Family and Friends">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+      All Meta Tags Are Handled by React Helmet. See index.js
     -->
   </head>
   <body>
