Update For Sitemaps

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
   <head>
     <!--
-      All Meta Tags Are Handled by React Helmet. See index.js
+      Most Meta Tags Are Handled by React Helmet. See index.js
     -->
+    <meta charSet="utf-8"/>
+    <title>The Trove of Gems Photo Album</title>
+    <meta name='description' content="MERN-Stack Web App That Serves A Photo Album For Our Family and Friends"/>
+    <meta name="keywords" content="the trove of gems, trove of gems, dustin greco, dustin k greco, photo album app, photo album, photo app, mern stack"/>
+    <meta name="author" content="Dustin K Greco" />
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:site_name" content="The Trove of Gems Photo Album"/>
+    <meta property="og:title" content="The Trove of Gems Photo Album"/>
+    <meta property="og:url" content="https://www.photo-album.thetroveofgems.tech"/>
+    <meta property="og:image" content="/favicon.ico"/>
+    <meta property="og:description" content="MERN-Stack Web App That Serves A Photo Album For Our Family and Friends"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
