--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
       Most Meta Tags Are Handled by React Helmet. See index.js
     -->
     <meta charSet="utf-8"/>
-    <title>The Trove of Gems Photo Album</title>
+    <title>The Trove of Gems Photo Album - Dustin K Greco</title>
     <meta name='description' content="MERN-Stack Web App That Serves A Photo Album For Our Family and Friends"/>
     <meta name="keywords" content="the trove of gems, trove of gems, dustin greco, dustin k greco, photo album app, photo album, photo app, mern stack"/>
     <meta name="author" content="Dustin K Greco" />
@@ -18,6 +18,7 @@
     <meta property="og:description" content="MERN-Stack Web App That Serves A Photo Album For Our Family and Friends"/>
   </head>
   <body>
+    <h1 class="pageH1SEO" style="font-size: 1rem;">The Trove of Gems Technology Photo Album: Dustin K Greco</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
