Attempt fix for mui-icons

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,8 @@
     <meta property="og:url" content="https://www.photo-album.thetroveofgems.tech"/>
     <meta property="og:image" content="/favicon.ico"/>
     <meta property="og:description" content="MERN-Stack Web App That Serves A Photo Album For Our Family and Friends"/>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <h1 class="pageH1SEO" style="font-size: 1rem;">The Trove of Gems Technology Photo Album: Dustin K Greco</h1>
