Set CSP in index

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,8 @@
     <meta property="og:description" content="MERN-Stack Web App That Serves A Photo Album For Our Family and Friends"/>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta http-equiv="Content-Security-Policy"
+          content="script-src 'self' https://fonts.googleapis.com 'unsafe-inline';">
   </head>
   <body>
     <h1 class="pageH1SEO" style="font-size: 1rem;">The Trove of Gems Technology Photo Album: Dustin K Greco</h1>
