--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,10 @@
     <meta http-equiv="Content-Security-Policy"
           content="script-src 'self' https://fonts.googleapis.com 'unsafe-inline';">
 
+    <!-- Adds the Flotr2 Library -->
+    <script src="https://cdn.jsdelivr.net/npm/flotr2@0.1.0/flotr2.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/flotr2@0.1.0/lib/jasmine/jasmine.min.css" rel="stylesheet" />
+
   </head>
   <body>
     <h1 class="pageH1SEO" style="font-size: 1rem;">The Trove of Gems Technology Photo Album: Dustin K Greco</h1>
