--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,8 +22,8 @@
           content="script-src 'self' https://fonts.googleapis.com 'unsafe-inline';">
 
     <!-- Adds the Flotr2 Library -->
-    <script src="https://cdn.jsdelivr.net/npm/flotr2@0.1.0/flotr2.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/flotr2@0.1.0/lib/jasmine/jasmine.min.css" rel="stylesheet" />
+    <!--<script src="https://cdn.jsdelivr.net/npm/flotr2@0.1.0/flotr2.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/flotr2@0.1.0/lib/jasmine/jasmine.min.css" rel="stylesheet" />-->
 
   </head>
   <body>
